samples/_failures_safe/1761270024_515045_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc64bb37.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_cc64bb37.c:161:27: error: ‘TO’ undeclared (first use in this function)
  161 |         if (token.type == TO
      |                           ^~
./samples/SAFE/__tmp_cc64bb37.c:161:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cc64bb37.c:161:29: error: expected ‘)’ at end of input
  161 |         if (token.type == TO
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_cc64bb37.c:161:9: error: expected declaration or statement at end of input
  161 |         if (token.type == TO
      |         ^~
./samples/SAFE/__tmp_cc64bb37.c:161:9: error: expected declaration or statement at end of input
